--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -std=c++14")
 #add_compile_options(-O2)
 #add_compile_options(-g)
 
-file(GLOB SOURCE_FILES "${SRC_DIR}/*.cpp")
+file(GLOB SOURCE_FILES "${SRC_DIR}/Demo.cpp" "${SRC_DIR}/pics2bits.cpp")
 add_executable(pics2bits ${SOURCE_FILES})
 
 include_directories(SYSTEM ${LIB_DIR})
