library refactored and metrics print

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.5)
 project(pics2bits)
 
 set(SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src/")
-set(LIB_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/")
+set(P2B_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src/pics2bits/")
 
 find_package(OpenCV REQUIRED)
 
@@ -10,10 +10,10 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -std=c++14")
 #add_compile_options(-O2)
 #add_compile_options(-g)
 
-file(GLOB SOURCE_FILES "${SRC_DIR}/Demo.cpp" "${SRC_DIR}/pics2bits.cpp")
+file(GLOB SOURCE_FILES "${SRC_DIR}/Demo.cpp" "${P2B_DIR}/*.cpp")
 add_executable(pics2bits ${SOURCE_FILES})
 
-include_directories(SYSTEM ${LIB_DIR})
+include_directories(${P2B_DIR})
 include_directories(${SRC_DIR})
 
 #~~~~~ WATCH OUT FOR CORRECT NAMES OF LIBRARIES LOCATIONS
