--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.5)
 project(pics2bits)
 
 set(SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src/")
-set(P2B_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src/pics2bits/")
+set(P2B_DIR "${SRC_DIR}/p2b/")
 
 find_package(OpenCV REQUIRED)
 
@@ -11,10 +11,9 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -std=c++14")
 #add_compile_options(-g)
 
 file(GLOB SOURCE_FILES "${SRC_DIR}/Demo.cpp" "${P2B_DIR}/*.cpp")
-add_executable(pics2bits ${SOURCE_FILES})
+add_executable(p2b_demo ${SOURCE_FILES})
 
 include_directories(${P2B_DIR})
-include_directories(${SRC_DIR})
 
 #~~~~~ WATCH OUT FOR CORRECT NAMES OF LIBRARIES LOCATIONS
-target_link_libraries(pics2bits ${OpenCV_LIBS})
+target_link_libraries(p2b_demo ${OpenCV_LIBS})
