--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,8 @@ set(P2B_DIR "${SRC_DIR}/p2b/")
 find_package(OpenCV REQUIRED)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -std=c++20")
-#add_compile_options(-O2)
-#add_compile_options(-g)
+set(CMAKE_CXX_FLAGS_DEBUG "-g")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
 file(GLOB SOURCE_FILES "${SRC_DIR}/Demo.cpp" "${P2B_DIR}/*.cpp")
 add_executable(p2b_demo ${SOURCE_FILES})
